--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         </div>
         <p class="mb-2">GIS professional focus on GIS related system design, application development and business case analysis. </p>
         <p class="mb-2">Rich solution providing experience from many industies, including but not limit to: <strong> Defence, Forestry, Public Health, Disaster Response and Transpotation</strong></p>
-        <p class="mb-4">Currently I'm working as a Software Engineer for <a href="https://leonardocompany.ca/company">Leonardo Canada Electronics</a>, to know more of the things I do or to get in touch with me, please use my contact Email provided above or use one of the social media information provided below.</p>
         <p class="mb-4">I've Recenlty finishing up my Master Degree from <a href="https://www.wisc.edu/">University Wisconsin-Madison</a>, where I've further enhanced my GIS knowledge from different perspectives.</p>
-        <p class="mb-4">My latest focus has been GIS related solution containerization and Geospatial Software System Design, connect to me through my linkedIn below, if you wish to contact me. I love discussing everything GIS or technology in general.</p>
+        <p class="mb-4">My latest focus has been GIS related solution containerization and Geospatial Software System Design. Currently I'm working as a Software Engineer for <a href="https://leonardocompany.ca/company">Leonardo Canada Electronics</a></p>
+        <p class="mb-4">To know more of the things I do or to get in touch with me, please use my contact Email provided above or use one of the social media information provided below. I love discussing everything GIS or just technology in general.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/maxguoca">
             <i class="fab fa-linkedin-in"></i>
